Fix nav item text alignment and padding

--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -75,9 +75,10 @@
   background-color: #000;
   left: 0;
   list-style: none;
-  /* overflow: auto; */
+  padding-right: 1em;
   position: absolute;
   right: 0;
+  text-align: right;
 }
 
 .nav__sublist {
